src/components/LegendModal/LegendModal.less
.legend {
  overflow: auto;
  ::-webkit-scrollbar {
    display: none;
  }
}

.modalOnMobile {
  height: calc(var(--vh) * 100) !important;
  padding: 0 !important;
}

.modal {
  padding: 8px 0;
  .content {
    padding-left: 16px;
    box-shadow: @border-bottom-light;

    .listItem {
      @width: 18px;
      @height: 18px;

      display: flex;
      padding-bottom: 8px;

      .icon {
        width: @width;
        height: @height;
        margin-right: 12px;
      }

      svg {
        width: @width;
        height: @height;
      }
    }
  }
}

